<resources>
    <string name="app_name">ClicknBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="update_description">A new version of JustClicknPay is available, Install it now from Google Play Store.</string>
    <string name="not_now">LATER</string>
    <string name="update_settings">UPDATE</string>
    <string name="inr_symbol">\u20B9</string>
    <string name="response_failure_message">No response found</string>
    <string name="exception_message">Oops! something went wrong.</string>
    <string name="no_internet_message">No internet connection</string>
    <string name="email_send_message">Email send successfully</string>
    <string name="un_authorise_message">You are not authorize to use this module.</string>
    <string name="agent_inactive_message">Current agent is InActive.</string>
    <string name="no_data_found">No response found</string>
    <string name="no_transaction_found">Transaction not found. Please try again.</string>
    <string name="error_in_fetching">Error in fetching results.</string>
    <string name="error_in_response">Error in response.</string>
    <string name="promoApplyError">Promo code not applied.</string>
    <string name="email_resend_message">Please check your emailId and send again</string>
    <string name="empty_user_name">Enter your name</string>
    <string name="empty_email_address">Enter your emailId</string>
    <string name="empty_mobile_no">Enter your mobile number</string>
    <string name="empty_address">Please enter your address</string>
    <string name="empty_post">Please select your postal address</string>
    <string name="select_operator">Please select operator</string>
    <string name="empty_and_invalid_email">Email-Id is empty or invalid</string>
    <string name="empty_and_invalid_userId">User ID is empty or invalid</string>
    <string name="empty_and_invalid_otp">OTP is empty or invalid</string>
    <string name="empty_and_invalid_company">Company name is empty or invalid</string>
    <string name="empty_and_invalid_name">Name is empty or invalid</string>
    <string name="empty_and_invalid_agent_name">Agent name is empty or invalid</string>
    <string name="empty_and_invalid_first_name">First Name is empty or invalid</string>
    <string name="empty_and_invalid_last_name">Last Name is empty or invalid</string>
    <string name="first_name_and_last_name_equal">First and last name should not be match</string>
    <string name="empty_and_invalid_date_name">Date Of Birth is empty or invalid</string>
    <string name="empty_and_invalid_passport_number">Passport Number is empty or invalid</string>
    <string name="empty_and_invalid_passport_expiry_date">Passport Date is empty or invalid</string>
    <string name="empty_and_invalid_mobile">Mobile number is empty or invalid</string>
    <string name="empty_and_invalid_credit_card">Credit Card number is empty or invalid</string>
    <string name="empty_and_invalid_card_holder">Card holder name is empty or invalid</string>
    <string name="empty_and_invalid_landLine_number">LandLine number is empty or invalid</string>
    <string name="empty_and_invalid_pancard">Pancard number is empty or invalid</string>
    <string name="empty_and_invalid_pancardName">Pancard name is empty or invalid</string>
    <string name="empty_and_invalid_account_id">Account-Id is empty or invalid</string>
    <string name="empty_and_invalid_account_confirmation">Account number not match</string>
    <string name="empty_and_invalid_customer_id">Customer-Id is empty or invalid</string>
    <string name="empty_and_invalid_amount">Amount is empty or invalid</string>
    <string name="empty_and_invalid_reduce_amount">Reduce amount is empty or invalid</string>
    <string name="empty_and_invalid_regex">is empty or invalid</string>
    <string name="invalid_reduce_amount">Reduce amount should be less than available credit</string>
    <string name="invalid_amount">Please enter amount below 1000000</string>
    <string name="empty_remark">Remark is empty</string>
    <string name="appSession">Session expired! Please login again</string>
    <string name="empty_and_invalid_processing_cycle">Processing cycle is empty or invalid</string>
    <string name="empty_and_invalid_billing">Billing Unit is empty or invalid</string>
    <string name="empty_and_invalid_cycle">Cycle no is empty or invalid</string>
    <string name="empty_and_invalid_billing_group">Billing Group is empty or invalid</string>
    <string name="empty_and_invalid_city">Please select city</string>
    <string name="empty_and_invalid_subscriberId">SubscriberId is empty or invalid</string>
    <string name="empty_and_invalid_state">Please select state</string>
    <string name="empty_and_invalid_address">Address is empty or invalid</string>
    <string name="empty_and_invalid_pincode">Pincode is empty or invalid</string>
    <string name="empty_and_invalid_user_type">Select user type</string>
    <string name="empty_and_invalid_address_proof">Select address proof</string>
    <string name="empty_and_invalid_pin">Pin is empty or invalid</string>
    <string name="check_box">please check terms and condition</string>
    <string name="empty_and_invalid_credit">Credit value is empty or invalid</string>
    <string name="empty_and_invalid_receipt">Receipt number is empty or invalid</string>
    <string name="select_bank">Select Bank Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="select_submit_type">Please select deposit type</string>
    <string name="empty_and_invalid_narration">Bank narration is empty or invalid</string>
    <string name="empty_and_invalid_ledger">Bank Ledger Reference is empty or invalid</string>
    <string name="empty_and_invalid_agent_id">Agent Id is empty or invalid</string>
    <string name="empty_and_invalid_pnr">PNR is empty or invalid</string>
    <string name="empty_and_invalid_referenceId">ReferenceId is empty or invalid</string>
    <string name="empty_and_invalid_ifsc_code">IFSC code is empty or invalid</string>
    <string name="empty_and_invalid_relation">Please select relation</string>
    <string name="empty_and_invalid_transaction_type">Please select transaction type</string>
    <string name="empty_and_invalid_bank">Bank name is empty or invalid</string>
    <string name="empty_and_invalid_account_number">Account number is empty or invalid</string>
    <string name="amount_less_than100">Amount should be greater or equal to 100</string>
    <string name="max_rbl_amount">Maximum amount should be </string>
    <string name="amount_multiple100">Last amount slot should be greater or equal to 100</string>
    <string name="hotel_max_child">Max children can be two</string>
    <string name="hotel_max_adults">Max adults can be four</string>
    <string name="hotel_max_room">Max rooms can be four</string>
    <string name="nav_balance">Check Balance</string>
    <string name="nav_home">Home</string>
    <string name="train_route_map">Train Route Map</string>
    <string name="nav_agent">Agent</string>
    <string name="nav_recharge">Recharge</string>
    <string name="nav_recharge_list">Recharge List</string>
    <string name="nav_air_cancellation_list">Air Cancellation List</string>
    <string name="nav_refund_report_list">Air Refund Report</string>
    <string name="navSalesReportList">Air Sales Report</string>
    <string name="nav_bus_search">Bus Search</string>
    <string name="nav_bus_transaction_list">Bus Booking List</string>
    <string name="jctMoney">JCT Money</string>
    <string name="jctMoneyList">JCT Money Transactions</string>
    <string name="jctPayment">JCT Payment</string>
    <string name="nav_flight_search">Flight Search</string>
    <string name="nav_mobile">Mobile</string>
    <string name="nav_dth">DTH</string>
    <string name="nav_datacard">DataCard</string>
    <string name="nav_electricity">Electricity</string>
    <string name="nav_landline">Landline</string>
    <string name="nav_gas">Gas</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_agent_detail">Agent Detail</string>
    <string name="nav_agent_credit_request">Credit Request</string>
    <string name="nav_agent_deposit_request">Deposit Request</string>
    <string name="nav_hotel_search">Hotel Search</string>
    <string name="nav_credit_list">Credit List</string>
    <string name="nav_deposit_list">Deposit List</string>
    <string name="nav_credit_report">Agent Credit Report</string>
    <string name="nav_deposit_report">Agent Deposit Report</string>
    <string name="nav_insurance">Insurance</string>
    <string name="nav_insurance_list">Insurance List</string>
    <string name="nav_rapipay">MATM</string>
    <string name="nav_chatting">Chatting</string>
    <string name="nav_logout">Logout</string>
    <string name="About_us">About Us</string>
    <string name="terms_and_condition">Terms &amp; Conditions</string>
    <string name="accept_terms_and_condition">I accept</string>
    <string name="terms_condition"><b><i><u>Terms and Conditions</u></i></b></string>
    <string name="nav_product_balance_check">Product Balance Check</string>
    <string name="update_location"><b><i><u>Update Location</u></i></b></string>
    <string name="pnr">PNR Number</string>
    <string name="referenceId">Reference Id</string>
    <string name="getResponse">Get Response</string>
    <string name="trainBookCheckFragmentTitle">Train Booking Check</string>
    <string name="nav_train_booking_check">Train Booking Check</string>
    <string name="nav_train_search">Train Search</string>
    <string name="bookTrain">Search Train</string>
    <string name="qrCodePayment">Payment Details</string>
    <string name="qrCode">QR Code</string>
    <string name="sales_report">Sales Report</string>
    <string name="net_sales_report">Net Sales Report</string>
    <string name="agent_verification_fragment">Agent Verification</string>
    <string name="sales_accountList_fragment">SalesAccountListFragment</string>
    <string name="sales_account_statement">Sales Account Statement</string>
    <string name="filter_dialog_title">Date Filter</string>
    <string name="remark">Remark</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="login_pin">Login Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="reset_pin_detail">Please enter your new login pin below. If everything is correct, we will email you a copy of your login pin!</string>
    <string name="action_logout">Logout</string>
    <string name="action_download_aeps_txn_excel">Download Txn Register</string>
    <string name="user_email">Email</string>
    <string name="welcome_agent">Welcome Agent</string>
    <string name="amount_requested">Amount requested</string>
    <string name="submit">Submit</string>
    <string name="mobile">Mobile(optional)</string>
    <string name="from_Station">From Station</string>
    <string name="type_departure_city">Type departure city</string>
    <string name="train_name">Train Number</string>
    <string name="type_train_name">Type train Number</string>
    <string name="depart_on">Departs On</string>
    <string name="date">Date</string>
    <string name="remarks_editText_digits">0123456789 qwertzuiopasdfghjklyxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM-/.&amp;@ </string>
    <string name="download_face_rd"><u>Download Face RD Service</u></string>
    <string name="download_mantra_rd"><u>Download Mantra RD Service</u></string>
    <string name="download_morpho_rd"><u>Download Morpho RD Service</u></string>
    <string name="download_startek_rd"><u>Download Startek RD Service</u></string>
    <string name="action_settings">Change Password</string>
</resources>