<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup"
    android:background="@color/color_white"
    android:padding="@dimen/large_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp">

        <TextView
            android:id="@+id/for_text_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_pin"
            android:textColor="@color/dark_blue_color"
            android:textSize="@dimen/text_size_16sp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        >
        <TextView
            android:id="@+id/detail_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_pin_detail"
            android:textColor="@color/app_blue_color">

        </TextView>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="@dimen/medium_margin">
        <EditText
            android:id="@+id/currentPinEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/app_blue_color"
            android:hint="@string/login_pin"
            android:maxLines="1"
            android:layout_marginTop="@dimen/margin_30dp"
            android:singleLine="true"
            android:textColorHint="@color/lightBlueColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="@dimen/very_small_margin">
        <EditText
            android:id="@+id/newPinEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/app_blue_color"
            android:hint="@string/new_pin"
            android:maxLines="1"
            android:layout_marginTop="@dimen/margin_30dp"
            android:singleLine="true"
            android:textColorHint="@color/lightBlueColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginTop="@dimen/very_small_margin">
        <EditText
            android:id="@+id/confirmPinEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/app_blue_color"
            android:hint="@string/confirm_pin"
            android:maxLines="1"
            android:layout_marginTop="@dimen/margin_30dp"
            android:singleLine="true"
            android:textColorHint="@color/lightBlueColor"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30dp"
        android:gravity="right">

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_5dp"
            android:background="@drawable/blue_round_button_background"
            android:gravity="center"
            android:text="Reset Pin"
            android:textColor="@color/color_white" />

    </LinearLayout>
</LinearLayout>
