<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="1">


    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="@color/cardMobileBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/agent_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_agent"
                android:textColor="@color/dark_blue_color"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:textSize="@dimen/title_text_size"
                android:paddingBottom="@dimen/medium_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center"/>

            <EditText
                android:id="@+id/agent_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:ems="10"
                android:background="@color/transparent"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:padding="@dimen/small_margin"
                android:textColor="@color/app_blue_color"
                android:inputType="none"
                android:text="@string/user_email"
                android:textColorHint="@color/login_hint_color_new"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:background="@color/color_light_black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin">
            <EditText
                android:id="@+id/amount_request_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="@color/login_hint_color_new"
                android:textColor="@color/app_blue_color"
                android:hint="@string/amount_requested"
                android:text=""
                android:maxLength="10"
                android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginTop="@dimen/very_small_margin">
            <EditText
                android:id="@+id/mobile_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mobile"
                android:text=""
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/app_blue_color"
                android:textColorHint="@color/lightBlueColor"
                android:visibility="visible" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginTop="@dimen/very_small_margin">
            <EditText
                android:id="@+id/remark_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/app_blue_color"
                android:textColorHint="@color/login_hint_color_new"
                android:hint="@string/remark"
                android:digits="@string/remarks_editText_digits"
                android:text=""
                android:maxLines="3"
                android:singleLine="true"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:background="@drawable/blue_round_button_background"
                android:text="@string/submit"
                android:textColor="@color/color_white"
                android:textSize="@dimen/title_text_size" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>


